--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body {
 header {
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 
     background-image: url("headerback.jpg");
