--- a/style.css
+++ b/style.css
@@ -10,16 +10,16 @@ body {
 
 /* МЕДИАЗАПРОС */
 @media (max-width: 730px) {
-    header{
+    header {
+        /* font-size: 130%; */
         flex-direction: column;
         text-align: center;
-        justify-content: center;
+        justify-content: space-around;
     }
-    .menu{
+
+    nav {
         align-self: center;
-    }
-    .menu > a{
-        font-size: 15px;
+        font-size: 50%;
     }
 }
 /* КОНЕЦ МЕДИАЗАПРОСА */
