--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 
 
 
-
 /* СЛАЙДЕР */
 #slider{
     overflow: hidden;
@@ -51,7 +50,7 @@ body {
     background: rgb(177, 241, 155);
     border-radius: 20px;
     box-shadow: inset 0 0 0 0,
-    0px 0px 18px 8px rgba(0,0,0,0.61); 
+    0px 0px 18px 8px rgba(0,0,0,0.61);
 }
 
 .centering {
@@ -121,15 +120,7 @@ body {
     color:rgb(0, 0, 0)
 }
 
-/* .rightpic { */
-    /* display: inline-block; */
-    /* float: right; */
-     /* Выравнивание по правому краю */
-    /* margin: 10%; Отступы вокруг фотографии */
-    /* margin-top: 10px; */
-    /* margin-left: 80px; */
-    /* margin-right: 100px; */
-   /* } */
+
 
 /* Dropdown Button */
 .dropbtn {
@@ -182,10 +173,13 @@ header {
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-
+    /* position:fixed; */
+    /* top: 0;
+    left: 0;
+    width: 100%; */
     background-image: url("headerback.jpg");
     background-repeat: no-repeat;
-    
+    /* height: min-content;  */
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
@@ -211,18 +205,25 @@ nav a:hover {
 	color: #ffffff;
 }
 
+
 /* МЕДИАЗАПРОС */
 @media (max-width: 730px) {
     header {
         /* font-size: 130%; */
         flex-direction: column;
         /* text-align: center; */
-        /* justify-content: space-around; */
+        justify-content: space-around;
     }
 
     nav {
-        align-self: center;
-        font-size: 120%;
+        /* align-self: center; */
+        margin-bottom: 15px;
+    }
+    
+    nav a:hover {
+        border-radius: 10px;
+        background:#31572c;
+        color: #ffffff;
     }
 }
 /* КОНЕЦ МЕДИАЗАПРОСА */
@@ -297,6 +298,13 @@ aside {
     margin-top: 0;
     margin-left: 10px;
 }
+
+nav > a {
+    color: #132a13;
+	padding:15px 30px;
+	text-decoration: none;
+}
+
 
 div > h5 {
     color: black;
