--- a/style.css
+++ b/style.css
@@ -102,8 +102,10 @@ body {
     font-size: 200%;
     color:rgb(2, 14, 1)
 }
+
 .smallhometxt {
-    width: 95%;
+    width: 94%;
+    margin-left: 3%;
     margin-top: 20px;
     margin-bottom: 15px;
     font-family: monospace;
@@ -112,7 +114,8 @@ body {
 }
 
 .smallhometxt_2 {
-    width: 95%;
+    width: 94%;
+    margin-left: 3%;
     margin-top: 20px;
     margin-bottom: 15px;
     font-family: monospace;
