--- a/style.css
+++ b/style.css
@@ -1,13 +1,6 @@
 body {
-    /* background-color: rgb(236, 255, 231);  */
     background-color: rgb(236, 255, 231);
 }
-
-.getdown {
-    margin-top: 20px;
-}
-
-
 
 /* СЛАЙДЕР */
 #slider{
@@ -84,20 +77,107 @@ body {
     background: url("https://raw.githubusercontent.com/bedimcode/responsive-plants-website/main/assets/img/product5.png");
 }
 /* КОНЕЦ СЛАЙДЕРА */
-/* 
-.timer{
-    grid-area: timer;
-} */
+
+
+/* ОФОРМЛЕНИЕ ТЕКСТОВОГО КОНТЕНТА */
+
+h2 {
+    font-family: monospace;
+    color: rgba(7, 54, 28, 0.767);
+}
+
+h3 {
+    font-family: monospace;
+    color: rgba(14, 90, 48, 0.767);
+}
+
+p {
+    font-family: monospace;
+}
 
 u {
     font-family: monospace;
     font-size: 140%;
 }
 
+nav {
+    font-family: monospace;
+    font-size: 130%;
+}
+
+nav a {
+	color: #132a13;
+	padding: 15px 30px;
+	text-decoration: none;
+}
+
+nav a:hover {
+    border-radius: 10px;
+    background:#31572c;
+	color: #ffffff;
+}
+
+div > h3 {
+    color: black;
+    margin-top: 0;
+    margin-left: 10px;
+}
+
+nav > a {
+    color: #132a13;
+	padding:15px 30px;
+	text-decoration: none;
+}
+
+
+div > h5 {
+    color: black;
+    margin-bottom: 0;
+    margin-left: 10px;
+}
+
+.hometext {
+    margin-top: 20px;
+    font-family: monospace;
+    font-size: 200%;
+    color:rgb(2, 14, 1)
+}
+
+.smallhometext {
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-family: monospace;
+    font-size: 115%;
+    color:rgb(0, 0, 0)
+}
+
+.smallhometext_2 {
+    width: 94%;
+    margin-left: 3%;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-family: monospace;
+    font-size: 110%;
+    color:rgb(0, 0, 0)
+}
+
+.contact_h1 {
+    position: fixed;
+    margin-top: 10px;
+    font-family: monospace;
+    font-size: 200%;
+    color:rgb(2, 14, 1)
+}
+
+/* КОНЕЦ ОФОРМЛЕНИЯ ТЕКСТОВОГО КОНТЕНТА */
+
+
+/* БЛОКИ НА СТРАНИЦЕ КОНТАКТОВ */
 .mails{
     grid-area: mails;
     display: flex;
-    /* justify-content: center; */
     width: 70%;
     margin-left: 15%;
     flex-direction: column;
@@ -126,7 +206,7 @@ u {
 
 
 
-/* размещаем блоки с контентом последовательно, с помощью grid */
+/* РАЗМЕЩЕНИЕ БЛОКОВ ПРИ ПОМОЩИ GRID */
 main{
     width: 100%;
     padding-top: 20px;
@@ -138,9 +218,9 @@ main{
     "mails";
 }
 
+/* КОНЕЦ БЛОКОВ НА СТРАНИЦЕ С КОНТАКТАМИ */
 
-
-/* COUNTDOWN */
+/* ОБРАТНЫЙ ОТСЧЁТ */
 .countdown {
     display: inline-block;
     font-weight: 100;
@@ -150,7 +230,6 @@ main{
   
   .countdown-number {
     padding: 10px;
-    /* border-radius: 15px; */
     background: #c5ff8f;
     display: inline-block;
   }
@@ -158,7 +237,6 @@ main{
   .countdown-time {
     color:snow;
     padding: 15px;
-    /* border-radius: 15px; */
     background: #094d0f;
     display: inline-block;
   }
@@ -169,7 +247,8 @@ main{
     padding-top: 5px;
     font-size: 16px;
   }
-/* задаём поведение на мобильном устройстве */
+
+/* МЕДИАЗАПРОС */
   @media (max-width: 730px) {
       .countdown{
           font-size: 15px;
@@ -179,171 +258,37 @@ main{
       }
   }
 
-/* COUNTDOWN END */
+/* КОНЕЦ ОБРАТНОГО ОТСЧЁТА */
 
-.contact_box {
-    /* margin-right: 5px; */
-    border-radius: 10px;
-    width: 160px;
-    height: 50px;
-    background: rgb(192,252,153);
-}
-/* .timer_cont {
-    display: flex;
-    justify-content: center;
-    /* flex-direction: row; */
-    /* margin-top: 20px; */
-/* } */ 
-
-.contact_style {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    margin-top: 20px;
-    /* align-items: center; */
-}
-
-.contact_h1 {
-    position: fixed;
-    margin-top: 10px;
-    font-family: monospace;
-    font-size: 200%;
-    color:rgb(2, 14, 1)
-}
-
-.hh1 {
-    margin-top: 20px;
-    margin-left: 70px;
-    font-family: monospace;
-    font-size: 180%;
-    text-align: center;
-}
-
-.hometext {
-    /* width: 95%; */
-    margin-top: 20px;
-    font-family: monospace;
-    font-size: 200%;
-    color:rgb(2, 14, 1)
-}
-
-.smallhometxt {
-    width: 94%;
-    margin-left: 3%;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    font-family: monospace;
-    font-size: 115%;
-    color:rgb(0, 0, 0)
-}
-
-.smallhometxt_2 {
-    width: 94%;
-    margin-left: 3%;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    font-family: monospace;
-    font-size: 110%;
-    color:rgb(0, 0, 0)
-}
-
-
-
-/* Dropdown Button */
-.dropbtn {
-    font-family: monospace;
-    font-size: 120%;
-    border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #31572c;
-	color: #ffffff;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;
-    border-radius: 10px;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-/* .dropdown:hover .dropbtn {
-    border-radius: 10px;
-    background:#91ff00;} */
-
+ /* ОФОРМЛЕНИЕ ШАПКИ  */
 header {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-    /* position:fixed; */
-    /* top: 0;
-    left: 0;
-    width: 100%; */
-    background-image: url("headerback.jpg");
+    background-image: url("img/headerback.jpg");
     background-repeat: no-repeat;
-    /* height: min-content;  */
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
 }
+
 header img {
     width: 100px;
     padding: 10px;
 }
-nav {
-    font-family: monospace;
-    font-size: 130%;
-}
 
-nav a {
-	color: #132a13;
-	padding:15px 30px;
-	text-decoration: none;
-}
-
-nav a:hover {
-    border-radius: 10px;
-    background:#31572c;
-	color: #ffffff;
-}
+/* КОНЕЦ ОФОРМЛЕНИЯ ШАПКИ */
 
 
 /* МЕДИАЗАПРОС */
 @media (max-width: 730px) {
     header {
-        /* font-size: 130%; */
         flex-direction: column;
-        /* text-align: center; */
         justify-content: space-around;
     }
 
     nav {
-        /* align-self: center; */
         margin-bottom: 15px;
     }
     
@@ -355,29 +300,17 @@ nav a:hover {
 }
 /* КОНЕЦ МЕДИАЗАПРОСА */
 
+/* ОФОРМЛЕНИЕ СЕКЦИЙ */
 section {
-    /* float: left; */
     width: 80%;
-    /* margin-right: 20%; */
 }
 
 
 .sec3 {
-    /* float: left; */
     width: 94%;
-    /* margin-right: 10%; */
     margin-left: 3%;
 }
-.sec1 {
-    /* float: left; */
-    display: inline-block;
-    border: solid;
-    border-color: rgb(26, 124, 41);
-    padding: 10px;
-    margin: 10px;
-    border-radius: 20px;
-    
-}
+
 .sec2 {
     float: left;
     border: solid;
@@ -387,15 +320,27 @@ section {
     border-radius: 20px;
     
 }
+
+.sec1 {
+    display: inline-block;
+    border: solid;
+    border-color: rgb(26, 124, 41);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    
+}
+
 .main_cont {
     max-width: 100%;
     max-height: 100%;
     position: relative;
-    /* display: flex; */
     justify-content: space-between;
     margin-left: 15%;
 }
+/* КОНЕЦ ОФОРМЛЕНИЯ СЕКЦИЙ */
 
+/* СОЗДАНИЕ АДАПТИВНЫХ ИЗОБРАЖЕНИЙ */
 .responsive {
     width: 40%;
     height: auto;
@@ -405,77 +350,16 @@ section {
     width: 40%;
     height: auto;
 }
-
- .clear-left {
-    clear: left;
-} 
-
-.clear-right {
-    clear: right;
-} 
-
-h2 {
-    font-family: monospace;
-    color: rgba(7, 54, 28, 0.767);
-}
-
-h3 {
-    font-family: monospace;
-    color: rgba(14, 90, 48, 0.767);
-}
-
-p {
-    font-family: monospace;
-}
-
-aside {
-    width: 30%;
-    padding-left: .5rem;
-    margin-left: .5rem; 
-    margin-top: 8%; 
-    float: right;
-    box-shadow: inset 5px 0 5px -5px #29627e;
-    font-style: italic;
-    color: #1c4e68;
-}
+/* КОНЕЦ СОЗДАНИЯ АДАПТИВНЫХ ИЗОБРАЖЕНИЙ */
 
 
- div > h3 {
-    color: black;
-    margin-top: 0;
-    margin-left: 10px;
-}
-
-nav > a {
-    color: #132a13;
-	padding:15px 30px;
-	text-decoration: none;
-}
 
 
-div > h5 {
-    color: black;
-    margin-bottom: 0;
-    margin-left: 10px;
-}
 
-footer {
-    font-family: Arial, Helvetica, sans-serif;
-    height: max-content;
-    margin-bottom: -10px;
-    margin-left: 75%;
-    margin-right: -10px;
-    margin-top: 30px;
-}
-address {
-    padding: 10px;
-    color: rgb(0, 0, 0);
-    margin-left: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: right;
-}
+
+
+
+
 
 
 
